﻿zg 19.10.2014 03:03:18 +0200 - build 4147

1. убран ненужный код.

zg 19.10.2014 02:28:21 +0200 - build 4146

1. очередные проблемы с табами и раскраской в редакторе.

drkns 19.10.2014 00:25:12 +0200 - build 4145

1. Рефакторинг.

zg 19.10.2014 00:10:02 +0200 - build 4144

1. уточнение 4141.

2. древний баг, когда ECTL_GETINFO, вызванная из EE_REDRAW, возвращало некорректную LeftPos.

svs 18.10.2014 11:00:19 +0400 - build 4143

1. SQLite 3.8.7

w17 18.10.2014 06:15:54 +0300 - build 4142

1. уточнение 4135

zg 18.10.2014 02:39:46 +0200 - build 4141

1. 0002835: Цветомузыка при сдвиге содержимого редактора влево.

drkns 17.10.2014 23:22:14 +0200 - build 4140

1. #0002839: Неправильно ассоциированы названия атрибутов

zg 17.10.2014 14:01:23 +0200 - build 4139

1. уточнение 4137.

zg 17.10.2014 04:06:40 +0200 - build 4138

1. ACTL_GETWINDOWINFO возвращает все окна в порядке текущего z-order'а.

zg 17.10.2014 03:27:45 +0200 - build 4137

1. уточнение 4134: убрана копипаста и удаляются реально все цветовые области.

zg 17.10.2014 01:30:31 +0200 - build 4136

1. при открытии уже открытого файла в редакторе из поиска запрос выводился некорректно.

2. gcc warning.

w17 16.10.2014 02:20:55 +0300 - build 4135

1. M#2829: Пустой экран в вьювере при перезаписи файла

shmuel 16.10.2014 00:05:23 +0200 - build 4134

1. Добавлен флаг ECF_AUTODELETE. Если функция EditorControl(ECTL_ADDCOLOR) выставила данный флаг,
   то добавляемая цветовая область будет автоматически удалена Фаром непосредственно перед очередной
   посылкой плагинам события EE_REDRAW.

drkns 14.10.2014 22:24:10 +0200 - build 4133

1. При неудаче записи в tree3.far показывался некорректный код ошибки.

drkns 13.10.2014 19:25:09 +0200 - build 4132

1. С форума: "Начиная с билда 4062 скорость исполнения регулярок заметно упала."

drkns 11.10.2014 19:53:46 +0200 - build 4131

1. #0002827: При удалении групп раскраски файлов размер списка групп не уменьшается
