@@ -1,4 +1,8 @@
-﻿zg 19.10.2014 03:03:18 +0200 - build 4147
+﻿drkns 19.10.2014 08:47:14 +0200 - build 4148
+
+1. Уточнение 4145.
+
+zg 19.10.2014 03:03:18 +0200 - build 4147
 
 1. убран ненужный код.
 
